--- a/src/main/resources/templates/uploadImage.html
+++ b/src/main/resources/templates/uploadImage.html
@@ -24,7 +24,7 @@
 		</div> 
   	<div class="rotatedegrees">
 	  	<p><strong>Rotate N &deg; to Right</strong></p>
-	  	<input type="number" min="0" step="1" id="rotateDegrees" name="rotateDegrees">
+	  	<input type="number" step="1" id="rotateDegrees" name="rotateDegrees">
 	  	<label for="rotateDegrees">&deg;</label>
 	</div> 
 	<div class="grayScale">
