--- a/src/main/resources/templates/uploadImage.html
+++ b/src/main/resources/templates/uploadImage.html
@@ -10,8 +10,9 @@
     <p class="text-success" th:if="${successMessage}" th:text="${successMessage}"></p>
     <form method="POST" enctype="multipart/form-data" action="/uploadImage" >
   	<div>
-    	<input type="file" id="image" name="image" accept=".jpg, .jpeg, .png" multiple value="Choose Image" required/>
+    	<input type="file" id="image" name="image" accept=".jpg, .jpeg" multiple value="Choose Image" onchange=displayDiv() required/>
   	</div>
+  	<div id="imageTransformations" style="display:none">
   	<div class="preview">
     	<p>No files currently selected for upload</p>
   	</div>
@@ -36,14 +37,14 @@
 	  	<p><strong>Resize</strong></p>
 	  	<input type="checkbox" id="usingAspectRatio" name="usingAspectRatio">
 	  	<label for="usingAspectRatio">Maintain Aspect Ratio</label>
-	  	<input type="number" min="1" max="250" step="1" id="resize" name="resize">
+	  	<input type="number" min="1" max="250" step="1" id="resize" name="resize" disabled>
 	  	<label for="resize">&#37;</label>
 	  	<p></p>
 	  	<input type="checkbox" id="usingDimensions" name="usingDimensions">
 	  	<label for="usingDimensions">Using Dimensions</label>
-	  	<input type="number" step="1" id="imgheight" name="imgheight">
+	  	<input type="number" min="1" step="1" id="imgheight" name="imgheight" disabled>
 	  	<label for="imgheight">px</label>
-	  	<input type="number" step="1" id="imgwidth" name="imgwidth">
+	  	<input type="number" min="1" step="1" id="imgwidth" name="imgwidth" disabled>
 	  	<label for="imgwidth">px</label>
 	  	<!-- <p></p>
 	  	<button id="button" type="button" value="send" class="btn btn-primary" onclick="clearDimensionRadios()">Clear</button> -->
@@ -65,6 +66,7 @@
   	<div>
   		<input type="hidden" id="base64Image" name="base64Image">
     	<button type="submit" class="btn btn-primary" >Upload</button>
+  	</div>
   	</div>
   	<script>  	
   	function readFile() {
@@ -175,6 +177,10 @@
 	  	    document.getElementById('usingAspectRatio').checked = false;
 	  	};
 	  	
+	  	function displayDiv(){
+	  	    document.getElementById('imageTransformations').style.display='block';
+	  	}
+	  	
 	  	//Clear Dimension Radios
 	  	function clearDimensionRadios() {
 			var radList = document.getElementsByName('usingAspectRatio');
@@ -197,9 +203,9 @@
 	  	//Disable resize on selecting Thumbnail
 	  	document.getElementById('thumbnail').onchange = function() {
 	  		document.getElementById('resize').value = "";
-	  	    document.getElementById('resize').disabled = this.checked;
-	  	    document.getElementById('imgheight').disabled = this.checked;
-	  	    document.getElementById('imgwidth').disabled = this.checked;
+	  	    document.getElementById('resize').disabled = true;
+	  	    document.getElementById('imgheight').disabled = true;
+	  	    document.getElementById('imgwidth').disabled = true;
 	  	    document.getElementById('usingAspectRatio').checked = false;
 	  	    document.getElementById('usingDimensions').checked = false;
 	  	  	document.getElementById('usingAspectRatio').disabled = this.checked;
@@ -209,15 +215,15 @@
 	  //Disable aspect ratio on selecting dimension
 	  	document.getElementById('usingDimensions').onchange = function() {
 	  		document.getElementById('resize').value = "";
-	  	    document.getElementById('resize').disabled = this.checked;
+	  	    document.getElementById('resize').disabled = true;
 	  	  	document.getElementById('imgheight').disabled = !this.checked;
 	  	    document.getElementById('imgwidth').disabled = !this.checked;
 	  	};
 	  	
 	  //Disable dimension on selecting aspect ratio 
 	  	document.getElementById('usingAspectRatio').onchange = function() {
-	  	    document.getElementById('imgheight').disabled = this.checked;
-	  	    document.getElementById('imgwidth').disabled = this.checked;
+	  	    document.getElementById('imgheight').disabled = true;
+	  	    document.getElementById('imgwidth').disabled = true;
 	  		document.getElementById('imgheight').value = "";
 	  		document.getElementById('imgwidth').value = "";
 	  	    document.getElementById('resize').disabled = !this.checked;
