Added springdoc Swagger

--- a/src/main/resources/templates/uploadImage.html
+++ b/src/main/resources/templates/uploadImage.html
@@ -121,7 +121,7 @@
 	  	        	const imageHeight=this.height;
 	  	        	const imageWidth=this.width;
 	  	        };
-				image.width = "400";
+				image.height = "500";
 				image.id = "uploadedImage";
 	  	        listItem.appendChild(image);
 	  	        listItem.appendChild(para);
