Added Swagger image recognition fix

--- a/src/main/resources/templates/uploadImage.html
+++ b/src/main/resources/templates/uploadImage.html
@@ -65,7 +65,7 @@
 	</div>
   	<div>
   		<input type="hidden" id="base64Image" name="base64Image">
-    	<button type="submit" class="btn btn-primary" >Upload</button>
+    	<button type="submit" class="btn btn-primary" >Transform</button>
   	</div>
   	</div>
   	<script>  	
