Added API field values validations

--- a/src/main/resources/templates/uploadImage.html
+++ b/src/main/resources/templates/uploadImage.html
@@ -5,14 +5,16 @@
 </head>
 <body>
 <div class="container">
-    <h1>Choose a picture to Upload</h1>
+    <h1>Simple Image Processor</h1>
+    <h4>Choose a picture to Transform</h4>
     <p class="text-danger" th:if="${errorMessage}" th:text="${errorMessage}"></p>
     <p class="text-success" th:if="${successMessage}" th:text="${successMessage}"></p>
-    <form method="POST" enctype="multipart/form-data" action="/uploadImage" >
+    <form method="POST" enctype="multipart/form-data" action="/uploadImage" autocomplete="off">
   	<div>
     	<input type="file" id="image" name="image" accept=".jpg, .jpeg" multiple value="Choose Image" onchange=displayDiv() required/>
   	</div>
   	<div id="imageTransformations" style="display:none">
+	<p><strong>Image Preview</strong></p>
   	<div class="preview">
     	<p>No files currently selected for upload</p>
   	</div>
@@ -121,7 +123,7 @@
 	  	        	const imageHeight=this.height;
 	  	        	const imageWidth=this.width;
 	  	        };
-				image.height = "500";
+				image.height = "300";
 				image.id = "uploadedImage";
 	  	        listItem.appendChild(image);
 	  	        listItem.appendChild(para);
