Adding restrictions for filesize and dimensions

--- a/src/main/resources/templates/uploadImage.html
+++ b/src/main/resources/templates/uploadImage.html
@@ -44,9 +44,9 @@
 	  	<p></p>
 	  	<input type="checkbox" id="usingDimensions" name="usingDimensions">
 	  	<label for="usingDimensions">Using Dimensions</label>
-	  	<input type="number" min="1" step="1" id="imgheight" name="imgheight" disabled required>
+	  	<input type="number" min="1" step="1" max="5000" id="imgheight" name="imgheight" disabled required>
 	  	<label for="imgheight">px</label>
-	  	<input type="number" min="1" step="1" id="imgwidth" name="imgwidth" disabled required>
+	  	<input type="number" min="1" step="1" max="5000" id="imgwidth" name="imgwidth" disabled required>
 	  	<label for="imgwidth">px</label>
 	  	<!-- <p></p>
 	  	<button id="button" type="button" value="send" class="btn btn-primary" onclick="clearDimensionRadios()">Clear</button> -->
